Text wrap issue partially fixed

--- a/src/components/CatrgoryDetails/CategoryFilter/style.scss
+++ b/src/components/CatrgoryDetails/CategoryFilter/style.scss
@@ -12,7 +12,7 @@
     justify-content: center;
     &__item {
       margin-right: 10px;
-      color: #015EC9;
+      color: #015ec9;
       padding: 10px;
       font-weight: 400;
       cursor: pointer;
@@ -24,10 +24,10 @@
     grid-gap: 60px;
     margin-top: 5%;
   }
-  &__label{
+  &__label {
     margin-left: 2%;
   }
-  &__select{
+  &__select {
     margin-left: 15px;
     padding: 5px 10px;
     border: 1px solid #f0f0f0;
@@ -73,9 +73,8 @@
     }
   }
   &__card:hover {
-    box-shadow: 0 14px 28px rgba(0,0,0,0.10), 0 10px 10px rgba(0,0,0,0.10);
+    box-shadow: 0 14px 28px rgba(0, 0, 0, 0.1), 0 10px 10px rgba(0, 0, 0, 0.1);
     border-radius: 5px;
-    
   }
 }
 // Responsive
@@ -130,4 +129,3 @@
     }
   }
 }
-
